--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>NFT Market Place</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="page">
+      <header class="header">
+        
+      </header>
+
+
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
