import fonts, make variables

--- a/index.html
+++ b/index.html
@@ -7,9 +7,27 @@
   </head>
   <body>
     <div id="page">
-      <header class="header">
-        
-      </header>
+      <div class="grid_left">
+        <header class="header-left">
+          <img src="/img/logo-artzie.svg" alt="logo logo-artzie">
+          <ul class="navbar">
+            <li><a href="#">Market</a></li>
+            <li><a href="#">How It Works</a></li>
+            <li><a href="#">Galery</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+        </header>
+      </div>
+
+      <div class="grid_right">
+        <header class="header_right">
+          <ul>
+            <li><a href="#">Sing Up</a></li>
+            <li><a href="#" class="button">Sign In</a></li>
+          </ul>
+        </header>
+      </div>
+    
 
 
     </div>
