--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>NFT Market Place</title>
   </head>
   <body>
-    <div id="page">
+    <div class="page">
       <!-- HEADER STARTS HERE -->
       <header class="header">
         <img src="/img/logo-artzie.svg" alt="logo logo-artzie">
@@ -18,7 +18,7 @@
             <li><a href="#">About</a></li>
           </ul>
         </nav>
-        <aside>
+        <aside class="aside">
           <ul>
             <li><a href="#">Sign Up</a></li>
             <li><a href="#" class="sign-button">Sign In</a></li>
