--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -28,8 +28,8 @@
       <!-- HEADER ENDS HERE -->
       <!-- MAIN STARTS HERE -->
       <main>
-        <!-- LEFT GRID STARTS HERE -->
-        <div class="grid_left">
+        <!--HERO STARTS HERE -->
+        <div class="hero">
           <!-- HERO LEFT SECTION STARTS HERE -->
           <section class="hero_left">
               <h1>The largest NFT market with exceptional items on the vid</h1>
@@ -41,39 +41,51 @@
           </section>
           <!-- HERO LEFT SECTION ENDS HERE -->
           <!-- GALERY SECTION STARTS HERE -->
-          <div class="galery">
+          <div class="gallery">
             <h2>Featured Artwork</h2>
             <article>
-              <img src="/img/placeholder_1.png" alt="nft img">
+              <img src="/img/project-1-img.png" alt="nft img">
             </article>
             <article>
-              <img src="/img/placeholder_2.png" alt="nft img">
+              <img src="/img/project-2-img.png" alt="nft img">
             </article>
           </div>
           <!-- GALERY SECTION ENDS HERE -->
         </div>
-        <!-- LEFT GRID ENDS HERE -->
+        <!--HERO ENDS HERE -->
 
-        <!-- RIGHT GRID STARTS HERE -->
-        <div class="grid_right">
+        <!-- CONTENT STARTS HERE -->
+        <div class="content">
+
           <figure>
-            <img src="/img/placeholder_3.png" alt="nft image">
+            <img src="/img/nft-image.png" alt="nft image">
             <figcaption>An image of a NFT currently up for auction </figcaption>
           </figure>
-          <article class="bid">
-            <div class="user">
-              <p>@samanthaw</p>
-              <p>Artwork #01</p>
+
+          <div class="nft-data">
+            <div class="nft_header">
+              <div class="ownder">
+                <img width="50" src="/img/nft-owner.png" alt="owner profile picture">
+                <div class="ownder-data">
+                  <p>@samanthaw</p>
+                  <p>Artwork #01</p>
+                </div>
+              </div>
+              
+              <div class="nft_price">
+                <p>Current Bid</p>
+                <p>1.00 ETH</p>
+              </div>
             </div>
-            <div class="current">
-              <p>Current Bid</p>
-              <p>1.00 ETH</p>
+
+            <div class="nft-buttons">
+              <a class="nft-buttons" href="#">Bid Now</a>
+              <a href="#">View Artwork</a>
             </div>
-            <a class="bid-button" href="#">Bid Now</a>
-            <a href="#">View Artwork</a>
-          </article>
+
+          </div>
         </div>
-      <!-- RIGHT GRID ENDS HERE -->
+      <!-- CONTENT ENDS HERE -->
       </main>
       <!-- MAIN ENDS HERE -->
     </div>
