styles nfg data 50%

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
             <figcaption>An image of a NFT currently up for auction </figcaption>
           </figure>
 
-          <div class="nft-data">
+          <div class="nft_data">
             <div class="nft_header">
-              <div class="ownder">
-                <img width="50" src="/img/nft-owner.png" alt="owner profile picture">
-                <div class="ownder-data">
+              <div class="owner_data">
+                <img src="/img/nft-owner.png" alt="owner profile picture">
+                <div class="owner">
                   <p>@samanthaw</p>
                   <p>Artwork #01</p>
                 </div>
@@ -78,8 +78,8 @@
               </div>
             </div>
 
-            <div class="nft-buttons">
-              <a class="nft-buttons" href="#">Bid Now</a>
+            <div class="nft_buttons">
+              <a class="bid_button" href="#">Bid Now</a>
               <a href="#">View Artwork</a>
             </div>
 
