buttons styles . Content finished

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <div class="page">
       <!-- HEADER STARTS HERE -->
       <header class="header">
+        <!-- LOGO -->
         <img src="/img/logo-artzie.svg" alt="logo logo-artzie">
+        <!-- MAIN NAV -->
         <nav>
           <ul class="navbar">
             <li><a href="#">Market</a></li>
@@ -18,14 +20,15 @@
             <li><a href="#">About</a></li>
           </ul>
         </nav>
+        <!-- ASIDE LOGIN MENU -->
         <aside class="aside">
           <ul>
             <li><a href="#">Sign Up</a></li>
             <li><a href="#" class="sign-button">Sign In</a></li>
           </ul>
         </aside>
+        <!-- HEADER ENDS HERE -->
       </header>
-      <!-- HEADER ENDS HERE -->
       <!-- MAIN STARTS HERE -->
       <main>
         <!--HERO STARTS HERE -->
@@ -38,8 +41,8 @@
                 <li><a class="explore-button" href="#">Explore</a></li>
                 <li><a href="#">Learn More</a></li>
               </ul>
+              <!-- HERO LEFT SECTION ENDS HERE -->
           </section>
-          <!-- HERO LEFT SECTION ENDS HERE -->
           <!-- GALERY SECTION STARTS HERE -->
           <div class="gallery">
             <h2>Featured Artwork</h2>
@@ -49,19 +52,22 @@
             <article>
               <img src="/img/project-2-img.png" alt="nft img">
             </article>
+            <!-- GALERY SECTION ENDS HERE -->
           </div>
-          <!-- GALERY SECTION ENDS HERE -->
+           <!--HERO ENDS HERE -->
         </div>
-        <!--HERO ENDS HERE -->
+        
 
         <!-- CONTENT STARTS HERE -->
         <div class="content">
 
+          <!-- CONTENT IMG -->
           <figure>
             <img src="/img/nft-image.png" alt="nft image">
             <figcaption>An image of a NFT currently up for auction </figcaption>
           </figure>
 
+          <!-- CONTENT INFO -->
           <div class="nft_data">
             <div class="nft_header">
               <div class="owner_data">
@@ -82,12 +88,21 @@
               <a class="bid_button" href="#">Bid Now</a>
               <a href="#">View Artwork</a>
             </div>
-
           </div>
+
+          <!-- CONTENT NUMBERS -->
+          <div class="numbers">
+            <ul>
+              <li><span class="red_number">50K+</span>Artwork</li>
+              <li><span class="red_number">30k+</span>Artist</li>
+              <li><span class="red_number">20K+</span>Auction</li>
+            </ul>
+          </div>
+          <!-- CONTENT ENDS HERE -->
         </div>
-      <!-- CONTENT ENDS HERE -->
+        <!-- MAIN ENDS HERE -->
       </main>
-      <!-- MAIN ENDS HERE -->
+      
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
