--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
       <main>
         <!--HERO STARTS HERE -->
         <div class="hero">
-          <!-- HERO LEFT SECTION STARTS HERE -->
-          <section class="hero_left">
-              <h1>The largest NFT market with exceptional items on the vid</h1>
+          <!-- HERO MAIN STARTS HERE -->
+          <section class="hero_main">
+              <h1>The largest NFT market with exceptional items on the bid</h1>
               <p>Collectible and non-fungible tokens in your hands</p>
               <ul>
                 <li><a class="explore-button" href="#">Explore</a></li>
                 <li><a href="#">Learn More</a></li>
               </ul>
-              <!-- HERO LEFT SECTION ENDS HERE -->
+              <!-- HERO MAIN ENDS HERE -->
           </section>
           <!-- GALERY SECTION STARTS HERE -->
           <div class="gallery">
