hero buttons styled

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           <section class="hero_main">
               <h1>The largest NFT market with exceptional items on the bid</h1>
               <p>Collectible and non-fungible tokens in your hands</p>
-              <ul>
-                <li><a class="explore-button" href="#">Explore</a></li>
-                <li><a href="#">Learn More</a></li>
+              <ul class="hero_buttons">
+                <li><a class="explore_button" href="#">Explore</a></li>
+                <li><a class="arrow" href="#">Learn More <img src="/img/arrow.svg" alt=""></a></li>
               </ul>
               <!-- HERO MAIN ENDS HERE -->
           </section>
