--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <!-- HEADER STARTS HERE -->
       <header class="header">
         <!-- LOGO -->
-        <img src="/img/logo-artzie.svg" alt="logo logo-artzie">
+        <a href="index.html"><img src="/img/logo-artzie.svg" alt="logo logo-artzie"></a>
         <!-- MAIN NAV -->
         <nav>
           <ul class="navbar">
@@ -46,10 +46,8 @@
           <!-- GALERY SECTION STARTS HERE -->
           <div class="gallery">
             <h2>Featured Artwork</h2>
-            <article>
+            <article class="nft-art">
               <img src="/img/project-1-img.png" alt="nft img">
-            </article>
-            <article>
               <img src="/img/project-2-img.png" alt="nft img">
             </article>
             <!-- GALERY SECTION ENDS HERE -->
